force-app/main/default/objects/Bank_Card__c/Bank_Card__c.object-meta.xml
<CustomObject>
    <label>Bank Card</label>
    <nameField>
        <displayFormat>CRD-{0000}</displayFormat>
        <label>Bank_Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>