force-app/main/default/objects/Bank_Card__c/fields/Card_Bank__c.field-meta.xml
<CustomField>
    <fullName>Card_Bank__c</fullName>
    <description>name of the bank that issued the card</description>
    <label>Card Bank</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>