force-app/main/default/objects/Bank_Card__c/fields/Card_Owner__c.field-meta.xml
<CustomField>
    <fullName>Card_Owner__c</fullName>
    <label>Card Owner</label>
    <referenceTo>Bank_User__c</referenceTo>
    <relationshipLabel>Bank Cards</relationshipLabel>
    <relationshipName>Bank_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>