force-app/main/default/objects/Bank_Card__c/fields/Card_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Owner_Name__c</fullName>
    <label>Card Owner Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>