force-app/main/default/objects/Bank_Card__c/fields/cardCredit__c.field-meta.xml
<CustomField>
    <fullName>cardCredit__c</fullName>
    <label>cardCredit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>