force-app/main/default/objects/Bank_Card__c/fields/CardNo__c.field-meta.xml
<CustomField>
    <fullName>CardNo__c</fullName>
    <label>CardNo</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>