force-app/main/default/objects/Bank_Card__c/fields/cardPIN__c.field-meta.xml
<CustomField>
    <fullName>cardPIN__c</fullName>
    <label>cardPIN</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>