force-app/main/default/objects/Bank_Card__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&quot;RUB&quot;</defaultValue>
    <label>Currency</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>