force-app/main/default/objects/Bank_Card__c/validationRules/CardNoCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CardNoCheck</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( TEXT( CardNo__c )) &lt; 16</errorConditionFormula>
    <errorDisplayField>CardNo__c</errorDisplayField>
    <errorMessage>Please enter a valid card number</errorMessage>
</ValidationRule>