force-app/main/default/objects/Bank_Card__c/validationRules/CurrencyCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CurrencyCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Currency__c != &quot;RUB&quot; &amp;&amp; Currency__c != &quot;USD&quot; &amp;&amp; Currency__c != &quot;BYN&quot;</errorConditionFormula>
    <errorDisplayField>Currency__c</errorDisplayField>
    <errorMessage>This Currency is not supported</errorMessage>
</ValidationRule>