force-app/main/default/objects/Bank_Card__c/validationRules/Pin_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Pin_Check</fullName>
    <active>true</active>
    <errorConditionFormula>cardPIN__c &lt; 1000</errorConditionFormula>
    <errorDisplayField>cardPIN__c</errorDisplayField>
    <errorMessage>Please enter a PIN-code. It cannot start at zero</errorMessage>
</ValidationRule>